# wuziqi_claude

./: .gitignore  Cargo.toml  README.md  ai.js  llm_config.example.json  run_wuziqi.command  wuziqi.html
.github/workflows/: ci.yml
src/: ai.rs  app.rs  board_view.rs  config_ui.rs  game.rs  llm_ai.rs  main.rs
tests/unit_tests/: ai_tests.rs  app_tests.rs  game_tests.rs  mod.rs  support.rs
