[package]
name = "wuziqi"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
description = "A native and web Gomoku game with tactical-search and optional OpenRouter AI"
repository = "https://github.com/zhenghu/wuziqi_codex"
readme = "README.md"
publish = false

[dependencies]
macroquad = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[profile.release]
opt-level = 3
